Various errors and bug fixes
